--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "nodemon index.js"
+    "start:server": "nodemon index.js",
+    "build": "webpack",
+    "postinstall": "ng build --prod"
   },
   "author": "",
   "license": "ISC",
+  
   "dependencies": {
     "@pusher/chatkit-server": "^1.0.4",
     "body-parser": "^1.18.3",
@@ -26,5 +29,9 @@
     "shortid": "^2.2.14",
     "tedious": "^2.6.1",
     "touch": "^3.1.0"
+  },
+  "engines": {
+    "node": "8.11.2",
+    "npm": "6.1.0"
   }
 }
