--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
     "@pusher/chatkit-server": "^1.0.4",
     "body-parser": "^1.18.3",
@@ -19,19 +18,22 @@
     "dotenv": "^6.2.0",
     "edge": "^7.10.1",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mongoose": "^5.1.7",
-    "msnodesqlv8": "^0.6.6",
-    "mssql": "^4.1.0",
-    "multer": "^1.4.0",
+   
+    "mssql": "^4.3.1",
+    "multer": "^1.4.1",
     "pusher": "^2.2.0",
     "shortid": "^2.2.14",
-    "tedious": "^2.6.1",
+    "tedious": "^2.7.1",
     "touch": "^3.1.0"
   },
   "engines": {
     "node": "8.11.2",
     "npm": "6.1.0"
-  }
+  },
+  "optionalDependencies": {
+    "msnodesqlv8": "^0.6.6"
+    }
 }
