--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:server": "nodemon index.js",
-    "build": "webpack",
-    "postinstall": "ng build --prod"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
