--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "next build",
-    "start:server": "nodemon index.js",
+    "start": "node index.js",
     "build": "webpack"
   },
   "author": "",
