--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "next build",
-    "start": "node index.js",
+    "start": "npm start",
     "build": "webpack"
   },
   "author": "",
