--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "",
-
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "next build",
+    "start": "node index.js",
+    "build": "webpack"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
