--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^6.2.0",
     "edge": "^7.10.1",
     "ejs": "^2.6.1",
+    "msnodesqlv8": "^0.6.6",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mongoose": "^5.1.7",
@@ -30,5 +31,8 @@
   "engines": {
     "node": "8.11.2",
     "npm": "6.1.0"
-  }
+  },
+  "optionalDependencies": {
+    "msnodesqlv8": "^0.6.6"
+    }
 }
