--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "next build",
-    "start": "node Index.js",
-    "build": "webpack"
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
@@ -34,5 +31,5 @@
   },
   "optionalDependencies": {
     "msnodesqlv8": "^0.6.6"
-    }
+  }
 }
