--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node main.js"
+    "start": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,8 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mongoose": "^5.1.7",
-    "mssql": "^4.3.1",
+    "msnodesqlv8": "^0.6.12",
+    "mssql": "^4.3.2",
     "multer": "^1.4.1",
     "pusher": "^2.2.0",
     "shortid": "^2.2.14",
